@@ -37,7 +37,7 @@ public class UserControllerOwnTest {
         surveyAPI.successfulCreateTemplate(auth, List.of(uid), List.of());//创建一个survey
         var res = queryAPI.successfulQueryOwn(uid, auth, -1, 1);
         assert res.size() == 1;
-        assert res.getFirst() == 1;
+        assert res.get(0) == 1;
     }
 
     @Test
